test/main/com/ocaml/sdk/output/errors/samples/type/f6.ml
(*
Error: This expression has type int but an expression was expected of type float Hint: Did you mean `123.'?
*)
let _ : float = 123;;